--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.38",
+    "sucrase": "^3.34.0",
     "tailwindcss": "^3.4.4",
     "vite": "^6.2.3"
   }
